# primary-reason

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.d2
examples/: quickstart.py
scripts/: check_banned_phrases.py  check_image_urls.py  finalize_pypi.sh
src/primary_reason/: __init__.py  cli.py
src/primary_reason/adapters/: __init__.py  anthropic_adapter.py  base.py  mock.py  ollama_adapter.py  openai_adapter.py
src/primary_reason/core/: __init__.py  splitter.py  types.py  verifier.py
src/primary_reason/extractors/: primary_reason.py  prompts.py
src/primary_reason/interventions/: corruption.py  runner.py
src/primary_reason/metrics/: distance.py  faithfulness.py  swampman.py
src/primary_reason/plugins/: langfuse.py
tests/: conftest.py
tests/fixtures/: golden_fixtures.py
tests/integration/: test_integration_mock.py
tests/unit/: test_adapters.py  test_cli.py  test_corruption.py  test_distance.py  test_extractors.py  test_faithfulness.py  test_langfuse.py  test_property.py  test_runner.py  test_splitter.py  test_swampman.py  test_types.py  test_verifier.py
