[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "primary-reason"
dynamic = ["version"]
description = "Davidson primary-reason verifier: LLM CoT faithfulness via belief+desire+causal-role triangulation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "hinanohart" }]
keywords = ["llm", "faithfulness", "chain-of-thought", "davidson", "interpretability", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6,<3",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26,<3",
    "httpx>=0.27",
    "anthropic>=0.40,<0.50",
    "openai>=1.40",
    "tenacity>=8.2",
    "diskcache>=5.6",
]

[project.optional-dependencies]
ollama = ["ollama>=0.3"]
huggingface = ["transformers>=4.40", "torch>=2.2"]
langfuse = ["langfuse>=2.40"]
embeddings = ["sentence-transformers>=2.7"]
bench = ["datasets>=2.18", "pandas>=2.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "build>=1.2",
    "hatchling>=1.21",
]

[project.urls]
Homepage = "https://github.com/hinanohart/primary-reason"
Repository = "https://github.com/hinanohart/primary-reason"
Issues = "https://github.com/hinanohart/primary-reason/issues"
Changelog = "https://github.com/hinanohart/primary-reason/blob/main/CHANGELOG.md"

[project.scripts]
primary-reason = "primary_reason.cli:app"

[tool.hatch.version]
path = "src/primary_reason/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/primary_reason"]

[tool.hatch.build.targets.sdist]
include = ["src/primary_reason", "tests", "README.md", "LICENSE", "CHANGELOG.md", "CITATION.cff", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["diskcache.*", "ollama.*", "langfuse.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests (may require network or API keys)",
    "slow: slow tests excluded from default runs",
]

[tool.coverage.run]
source = ["src/primary_reason"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
